// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ExploreContainer matches snapshot with title and subtitle 1`] = `
<View
  colors={
    [
      "#3D6625",
      "#69AB3C",
    ]
  }
  end={
    {
      "x": 0,
      "y": 1,
    }
  }
  start={
    {
      "x": 0,
      "y": 0,
    }
  }
  style={
    {
      "flex": 1,
    }
  }
  testID="explore-container"
>
  <View
    style={
      {
        "alignItems": "center",
        "flex": 1,
        "gap": 12,
        "justifyContent": "center",
        "padding": 24,
      }
    }
  >
    <Image
      resizeMode="contain"
      source={
        {
          "testUri": "../../../src/assets/png/icon-only.png",
        }
      }
      style={
        {
          "height": 64,
          "width": 64,
        }
      }
    />
    <Text
      style={
        [
          {
            "fontSize": 24,
            "textAlign": "center",
          },
          {
            "color": "#FFFFFF",
            "fontFamily": "Montserrat-Bold",
          },
        ]
      }
    >
      Registro
    </Text>
    <Text
      style={
        [
          {
            "fontSize": 16,
            "opacity": 0.9,
            "textAlign": "center",
          },
          {
            "color": "#FFFFFF",
            "fontFamily": "Montserrat-Regular",
          },
        ]
      }
    >
      Crea tu cuenta
    </Text>
    <Text
      style={
        [
          {
            "fontSize": 14,
            "opacity": 0.8,
            "textAlign": "center",
          },
          {
            "color": "#FFFFFF",
            "fontFamily": "Montserrat-Regular",
          },
        ]
      }
    >
      Ingresa tus datos
    </Text>
  </View>
</View>
`;

exports[`Header matches snapshot 1`] = `
<View
  style={
    [
      {
        "paddingBottom": 8,
        "paddingHorizontal": 16,
        "width": "100%",
      },
      {
        "backgroundColor": "#10BCCA",
        "paddingTop": 8,
      },
    ]
  }
  testID="header"
>
  <View
    style={
      [
        {
          "alignItems": "center",
          "flexDirection": "row",
          "gap": 8,
          "minHeight": 44,
        },
        false,
      ]
    }
  >
    <Text
      numberOfLines={1}
      style={
        [
          {
            "flex": 1,
            "fontSize": 18,
          },
          {
            "color": "#FFFFFF",
            "fontFamily": "Montserrat-SemiBold",
          },
          false,
        ]
      }
      testID="header-title"
    >
      Inicio
    </Text>
    <View
      accessibilityState={
        {
          "busy": undefined,
          "checked": undefined,
          "disabled": undefined,
          "expanded": undefined,
          "selected": undefined,
        }
      }
      accessibilityValue={
        {
          "max": undefined,
          "min": undefined,
          "now": undefined,
          "text": undefined,
        }
      }
      accessible={true}
      collapsable={false}
      focusable={false}
      onClick={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        {
          "alignItems": "center",
          "backgroundColor": "rgba(255,255,255,0.15)",
          "borderRadius": 20,
          "flexDirection": "row",
          "gap": 4,
          "opacity": 1,
          "paddingHorizontal": 10,
          "paddingVertical": 4,
        }
      }
      testID="header-profile-btn"
    >
      <Text
        style={
          [
            {
              "fontSize": 14,
            },
            {
              "color": "#FFFFFF",
              "fontFamily": "Montserrat-SemiBold",
            },
          ]
        }
      >
        15
      </Text>
      <svg
        color="#FFFFFF"
        height={16}
        width={16}
      />
      <svg
        color="#FFFFFF"
        height={28}
        width={28}
      />
    </View>
  </View>
</View>
`;

exports[`MoonCard — name and icon never undefined (§4.4 bug fix) matches snapshot 1`] = `
<View
  style={
    [
      {
        "borderRadius": 12,
        "overflow": "hidden",
        "position": "relative",
      },
      {
        "backgroundColor": "#F5F5F5",
      },
    ]
  }
  testID="moon-card"
>
  <View
    style={
      {
        "alignItems": "center",
        "flexDirection": "row",
        "gap": 12,
        "padding": 16,
      }
    }
  >
    <View
      style={
        {
          "alignItems": "center",
          "height": 60,
          "justifyContent": "center",
          "width": 60,
        }
      }
    >
      <svg
        height={60}
        width={60}
      />
    </View>
    <View
      style={
        {
          "flex": 1,
          "gap": 2,
        }
      }
    >
      <Text
        style={
          [
            {
              "fontSize": 12,
            },
            {
              "color": "#525252",
              "fontFamily": "Montserrat-Regular",
            },
          ]
        }
      >
        Fase lunar
      </Text>
      <Text
        style={
          [
            {
              "fontSize": 16,
            },
            {
              "color": "#171717",
              "fontFamily": "Montserrat-Bold",
            },
          ]
        }
        testID="moon-card-phase-name"
      >
        Luna llena
      </Text>
    </View>
    <View
      style={
        {
          "alignItems": "center",
          "justifyContent": "center",
        }
      }
    >
      <svg
        color="#171717"
        height={20}
        width={20}
      />
    </View>
  </View>
  <View
    pointerEvents="none"
    style={
      {
        "bottom": 0,
        "opacity": 0.15,
        "position": "absolute",
        "right": 0,
      }
    }
  >
    <svg
      height={80}
      opacity={0.15}
      width={120}
    />
  </View>
</View>
`;

exports[`SyncAction matches snapshot (not pending) 1`] = `
<View
  style={
    {
      "gap": 8,
      "padding": 16,
    }
  }
  testID="sync-action"
>
  <Text
    style={
      [
        {
          "fontSize": 16,
        },
        {
          "color": "#171717",
          "fontFamily": "Montserrat-Bold",
        },
      ]
    }
  >
    Sincronización de datos
  </Text>
  <View
    style={
      {
        "alignItems": "center",
        "flexDirection": "row",
        "gap": 8,
      }
    }
    testID="sync-action-no-pending"
  >
    <svg
      color="#69AB3C"
      height={18}
      width={18}
    />
    <Text
      style={
        [
          {
            "flex": 1,
            "fontSize": 14,
          },
          {
            "color": "#525252",
            "fontFamily": "Montserrat-Regular",
            "fontStyle": "italic",
          },
        ]
      }
    >
      Todo sincronizado
    </Text>
  </View>
  <View
    style={
      {
        "height": 8,
      }
    }
  />
  <View
    accessibilityState={
      {
        "busy": undefined,
        "checked": undefined,
        "disabled": true,
        "expanded": undefined,
        "selected": undefined,
      }
    }
    accessibilityValue={
      {
        "max": undefined,
        "min": undefined,
        "now": undefined,
        "text": undefined,
      }
    }
    accessible={true}
    collapsable={false}
    focusable={false}
    onClick={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      {
        "alignItems": "center",
        "backgroundColor": "#E5E5E5",
        "borderRadius": 8,
        "flexDirection": "row",
        "gap": 8,
        "justifyContent": "center",
        "opacity": 1,
        "paddingHorizontal": 16,
        "paddingVertical": 12,
      }
    }
    testID="sync-action-btn"
  >
    <svg
      color="#A3A3A3"
      height={18}
      width={18}
    />
    <Text
      style={
        [
          {
            "fontSize": 14,
          },
          {
            "color": "#A3A3A3",
            "fontFamily": "Montserrat-SemiBold",
          },
        ]
      }
    >
      Sincronizar ahora
    </Text>
    <svg
      color="#A3A3A3"
      height={18}
      width={18}
    />
  </View>
</View>
`;

exports[`SyncAction matches snapshot (pending) 1`] = `
<View
  style={
    {
      "gap": 8,
      "padding": 16,
    }
  }
  testID="sync-action"
>
  <Text
    style={
      [
        {
          "fontSize": 16,
        },
        {
          "color": "#171717",
          "fontFamily": "Montserrat-Bold",
        },
      ]
    }
  >
    Sincronización de datos
  </Text>
  <View
    style={
      {
        "alignItems": "center",
        "flexDirection": "row",
        "gap": 8,
      }
    }
    testID="sync-action-pending"
  >
    <svg
      color="#E58B24"
      height={18}
      width={18}
    />
    <Text
      style={
        [
          {
            "flex": 1,
            "fontSize": 14,
          },
          {
            "color": "#E58B24",
            "fontFamily": "Montserrat-Regular",
            "fontStyle": "italic",
          },
        ]
      }
    >
      4 registros pendientes
    </Text>
  </View>
  <View
    style={
      {
        "height": 8,
      }
    }
  />
  <View
    accessibilityState={
      {
        "busy": undefined,
        "checked": undefined,
        "disabled": false,
        "expanded": undefined,
        "selected": undefined,
      }
    }
    accessibilityValue={
      {
        "max": undefined,
        "min": undefined,
        "now": undefined,
        "text": undefined,
      }
    }
    accessible={true}
    collapsable={false}
    focusable={false}
    onClick={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      {
        "alignItems": "center",
        "backgroundColor": "#1097AA",
        "borderRadius": 8,
        "flexDirection": "row",
        "gap": 8,
        "justifyContent": "center",
        "opacity": 1,
        "paddingHorizontal": 16,
        "paddingVertical": 12,
      }
    }
    testID="sync-action-btn"
  >
    <svg
      color="#FFFFFF"
      height={18}
      width={18}
    />
    <Text
      style={
        [
          {
            "fontSize": 14,
          },
          {
            "color": "#FFFFFF",
            "fontFamily": "Montserrat-SemiBold",
          },
        ]
      }
    >
      Sincronizar ahora
    </Text>
    <svg
      color="#FFFFFF"
      height={18}
      width={18}
    />
  </View>
</View>
`;

exports[`TimeFrame matches snapshot (month selected) 1`] = `
<View
  style={
    [
      {
        "alignSelf": "center",
        "borderRadius": 8,
        "borderWidth": 1,
        "flexDirection": "row",
        "overflow": "hidden",
      },
      {
        "backgroundColor": "#F5F5F5",
        "borderColor": "#E5E5E5",
      },
    ]
  }
  testID="time-frame"
>
  <View
    accessibilityState={
      {
        "busy": undefined,
        "checked": undefined,
        "disabled": undefined,
        "expanded": undefined,
        "selected": undefined,
      }
    }
    accessibilityValue={
      {
        "max": undefined,
        "min": undefined,
        "now": undefined,
        "text": undefined,
      }
    }
    accessible={true}
    collapsable={false}
    focusable={true}
    onClick={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      {
        "alignItems": "center",
        "backgroundColor": "#10BCCA",
        "flex": 1,
        "justifyContent": "center",
        "opacity": 1,
        "paddingHorizontal": 20,
        "paddingVertical": 8,
      }
    }
    testID="time-frame-month"
  >
    <Text
      style={
        [
          {
            "fontSize": 14,
            "textTransform": "capitalize",
          },
          {
            "color": "#FFFFFF",
            "fontFamily": "Montserrat-SemiBold",
          },
        ]
      }
    >
      Mes
    </Text>
  </View>
  <View
    accessibilityState={
      {
        "busy": undefined,
        "checked": undefined,
        "disabled": undefined,
        "expanded": undefined,
        "selected": undefined,
      }
    }
    accessibilityValue={
      {
        "max": undefined,
        "min": undefined,
        "now": undefined,
        "text": undefined,
      }
    }
    accessible={true}
    collapsable={false}
    focusable={true}
    onClick={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      {
        "alignItems": "center",
        "flex": 1,
        "justifyContent": "center",
        "opacity": 1,
        "paddingHorizontal": 20,
        "paddingVertical": 8,
      }
    }
    testID="time-frame-year"
  >
    <Text
      style={
        [
          {
            "fontSize": 14,
            "textTransform": "capitalize",
          },
          {
            "color": "#525252",
            "fontFamily": "Montserrat-Regular",
          },
        ]
      }
    >
      Año
    </Text>
  </View>
</View>
`;

exports[`TimeFrame matches snapshot (year selected) 1`] = `
<View
  style={
    [
      {
        "alignSelf": "center",
        "borderRadius": 8,
        "borderWidth": 1,
        "flexDirection": "row",
        "overflow": "hidden",
      },
      {
        "backgroundColor": "#F5F5F5",
        "borderColor": "#E5E5E5",
      },
    ]
  }
  testID="time-frame"
>
  <View
    accessibilityState={
      {
        "busy": undefined,
        "checked": undefined,
        "disabled": undefined,
        "expanded": undefined,
        "selected": undefined,
      }
    }
    accessibilityValue={
      {
        "max": undefined,
        "min": undefined,
        "now": undefined,
        "text": undefined,
      }
    }
    accessible={true}
    collapsable={false}
    focusable={true}
    onClick={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      {
        "alignItems": "center",
        "flex": 1,
        "justifyContent": "center",
        "opacity": 1,
        "paddingHorizontal": 20,
        "paddingVertical": 8,
      }
    }
    testID="time-frame-month"
  >
    <Text
      style={
        [
          {
            "fontSize": 14,
            "textTransform": "capitalize",
          },
          {
            "color": "#525252",
            "fontFamily": "Montserrat-Regular",
          },
        ]
      }
    >
      Mes
    </Text>
  </View>
  <View
    accessibilityState={
      {
        "busy": undefined,
        "checked": undefined,
        "disabled": undefined,
        "expanded": undefined,
        "selected": undefined,
      }
    }
    accessibilityValue={
      {
        "max": undefined,
        "min": undefined,
        "now": undefined,
        "text": undefined,
      }
    }
    accessible={true}
    collapsable={false}
    focusable={true}
    onClick={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      {
        "alignItems": "center",
        "backgroundColor": "#10BCCA",
        "flex": 1,
        "justifyContent": "center",
        "opacity": 1,
        "paddingHorizontal": 20,
        "paddingVertical": 8,
      }
    }
    testID="time-frame-year"
  >
    <Text
      style={
        [
          {
            "fontSize": 14,
            "textTransform": "capitalize",
          },
          {
            "color": "#FFFFFF",
            "fontFamily": "Montserrat-SemiBold",
          },
        ]
      }
    >
      Año
    </Text>
  </View>
</View>
`;
